# dl_project

./: .gitignore  README.md  bfqg_generator.py  bfqg_recursive_results.json  bfqg_results.json  fine_tune_bfqg.py  gricewise_evaluator.py  json_to_csv.py  main.py  pre_run.py  pyproject.toml  repl.py  t5-test.py
bfqg_finetuned/: .gitignore  README.md  adapter_config.json
data/: sample_seeds.json
