[project]
name = "dl-project"
version = "0.1.0"
description = "Bloom's Taxonomy-based Follow-up Question Generation using B-FQG and GriceWise Evaluation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch",
    "transformers",
    "sentencepiece",
    "protobuf>=6.33.1",
    "sentence-transformers",
    "nltk",
    "datasets",
    "tqdm",
]
