[project]
name = "dl-project"
version = "0.1.0"
description = "Bloom's Taxonomy-based Follow-up Question Generation using B-FQG and GriceWise Evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "sentencepiece",
    "protobuf>=6.33.1",
    "sentence-transformers",
    "nltk",
    "datasets",
    "tqdm",
    "spacy>=3.8.11",
    "scikit-learn>=1.7.2",
    "pip>=25.3",
    "peft>=0.18.0",
    "accelerate>=1.12.0",
    "openai>=2.9.0",
]

[tool.ruff]
line-length = 150
